# whole_simulation

./: CMakeLists.txt  CrystalEye.cc  README.md  kill.sh
DetectorStructure/Parameter/: AngleDistribution.C  ID_map.txt  Position_atc.txt  Position_down.txt  Position_down_corrected.txt  Position_up.txt  test.C
DetectorStructure/Parameter_UP/: Map_Pixel.pptx  PositionUP.txt  ReadPositionPar.C  readInParPosPixelUP.txt
DetectorStructure/Pixel_Down/: 00-VETO.stl  01-FASCIA_EXT.stl  02-CRISTALLI_EXT(0).stl  02-CRISTALLI_EXT(1).stl  02-CRISTALLI_EXT(10).stl  02-CRISTALLI_EXT(100).stl  02-CRISTALLI_EXT(101).stl  02-CRISTALLI_EXT(102).stl  02-CRISTALLI_EXT(103).stl  02-CRISTALLI_EXT(104).stl  02-CRISTALLI_EXT(105).stl  (+220 more)
build1/: CMakeCache.txt  CrystalEye  Makefile  cmake_install.cmake
condor/: clear.sh
gg/: CMakeCache.txt  CrystalEye  Makefile  cmake_install.cmake  submit_bkg.sh
include/: CrystalEyeActionInitialization.hh  CrystalEyeAnalysis.hh  CrystalEyeAnticoincidenceDataManager.hh  CrystalEyeAnticoincidenceHit.hh  CrystalEyeAnticoincidenceSD.hh  CrystalEyeCalorimeterDataManager.hh  CrystalEyeCalorimeterHit.hh  CrystalEyeCalorimeterSD.hh  CrystalEyeDetectorConstruction.hh  CrystalEyeDetectorMessenger.hh  CrystalEyeEventAction.hh  CrystalEyeParticles.hh  CrystalEyePhysicsList.hh  CrystalEyePhysicsListMessenger.hh  CrystalEyePrimaryGeneratorAction.hh  CrystalEyePrimaryGeneratorMessenger.hh  CrystalEyeRunAction.hh  CrystalEyeSteppingAction.hh  CrystalEyeTrackingAction.hh
macros/: gamma_point.mac  physics.mac  point.mac  run.mac  test.mac  vis.mac
result/: CrystalEyeMC_0_0_0.root  CrystalEyeMC_10_0_0.root  CrystalEyeMC_15_0_0.root  CrystalEyeMC_20_0_0.root  CrystalEyeMC_25_0_0.root  CrystalEyeMC_30_0_0.root  CrystalEyeMC_35_0_0.root  CrystalEyeMC_40_0_0.root  CrystalEyeMC_45_0_0.root  CrystalEyeMC_50_0_0.root  CrystalEyeMC_55_0_0.root  CrystalEyeMC_5_0_0.root  CrystalEyeMC_60_0_0.root  CrystalEyeMC_65_0_0.root  CrystalEyeMC_70_0_0.root  CrystalEyeMC_75_0_0.root  CrystalEyeMC_80_0_0.root  CrystalEyeMC_85_0_0.root  CrystalEyeMC_90_0_0.root
scripts/: GammaMap_Pow_Macro.C  kill.sh  macros_100kev.C  macros_10MeV.c  macros_10kev.c  macros_20kev.C  macros_2MeV.C  macros_30kev.C  macros_3MeV.C  macros_40kev.C  macros_4MeV.C  macros_500kev.C  macros_50kev.c  macros_5MeV.C  macros_60kev.c  macros_70kev.C  macros_8MeV.C  macros_90kev.C  macros_DiffAng.C  macros_DiffAng_Pow.C  macros_Diff_Theta_Phi.C  macros_Diff_Theta_Phi_Pow.C  macros_Diff_Theta_Phi_Uniform.C  macros_pixels.C  macros_pixels_2.C  submit_one.sh  submit_pixels.sh  submit_theta.sh  submit_theta_phi.sh  submit_theta_pow.sh  write_macros.C  write_macros_one.C
src/: CrystalEyeActionInitialization.cc  CrystalEyeAnalysis.cc  CrystalEyeAnticoincidenceDataManager.cc  CrystalEyeAnticoincidenceHit.cc  CrystalEyeAnticoincidenceSD.cc  CrystalEyeCalorimeterDataManager.cc  CrystalEyeCalorimeterHit.cc  CrystalEyeCalorimeterSD.cc  CrystalEyeDetectorConstruction.cc  CrystalEyeDetectorMessenger.cc  CrystalEyeEventAction.cc  CrystalEyeParticles.cc  CrystalEyePhysicsList.cc  CrystalEyePhysicsListMessenger.cc  CrystalEyePrimaryGeneratorAction.cc  CrystalEyePrimaryGeneratorMessenger.cc  CrystalEyeRunAction.cc  CrystalEyeSteppingAction.cc  CrystalEyeTrackingAction.cc
(+37780 files in other folders)
